Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38921

Performance regression of AnimatedImage

XMLWordPrintable

    • I7ab0b5f47ecec6cb3cdded0dd219d6acc1bc4148

      Since QtQuick2, the AnimatedImage component is less efficient than it was with QtQuick1. In fact, it uses more CPU and memory to work properly.

      To point out the issue, I made two similar applications, the first one using QtQuick1.1 and the second one using QtQuick 2.2. I compiled both applications with Qt 5.3.0 RC1 for Windows (MinGW) and I got the following results with a Intel Core i7-3610QM 2.3 GHz processor and a NVidia GeForce 670M GTX graphic card :

      • QtQuick1.1 : 0% of CPU, 22Mo of RAM
      • QtQuick2.2 : 5% of all my threads (if you combine, it represents 40% of one thread), 54Mo of RAM.

      I think the RAM usage is not really important (it just requires AnimatedImage to use a cache system), but the CPU usage may be really embarrassing on mobile platform. It's probably related to the scene graph.

      Please feel free to ask more information if you need.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sletta Gunnar Sletta
            amnell Louis du Verdier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes