Optimize the way AnimatedImage display its content

Since QtQuick2, the AnimatedImage component is less efficient than it
was with QtQuick1, using more CPU and RAM.

This commit makes it upload when required each animation frame as a
cached texture (using QQuickPixmapCache) to speed up the component.

Task-number: QTBUG-38921
Change-Id: I7ab0b5f47ecec6cb3cdded0dd219d6acc1bc4148
Reviewed-by: Gunnar Sletta <gunnar.sletta@jollamobile.com>